--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>cvber</title>
+        <title>Bernardo Soriano</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -24,21 +24,104 @@
         <![endif]-->
 
 
-        <div class="container">
+        <div class="container landingHome">
             <div class="header">
-                <ul class="nav nav-pills pull-right">
+                <!--<ul class="nav nav-pills pull-right">
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                </ul>
-                <h3 class="text-muted">cvber</h3>
+                </ul>-->
+                <h1 class="text-muted">Bernardo Soriano - Mobile & UI Engineer</h1>
+                <div class="headerContainer">
+                    <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>                
+                    <h2 class="text-muted">Available for hiring</h2>
+                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                    <h2 class="text-muted">bersoriano@me.com</h2>                    
+                </div>
             </div>
 
-            <div class="jumbotron">
-                <h1>'Allo, 'Allo!</h1>
-                <p class="lead">Always a pleasure scaffolding your apps.</p>
-                <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <h3 class="panel-title">Cover letter</h3>
+              </div>
+              <div class="panel-body">
+                <ul>
+                    <li> Delivering world class experiences for web and mobile, working across user interface, mobile strategies and digital transformation programs.</li>
+                    <li> Industry background: Banking, Insurance, Investments, Digital Marketing, Digital Publishing, Entrepreneurship.</li>
+                    <li> Key words: Cross platform, cross device, cross browser, front end engineering, mobile web, hybrid mobile applications, user interface, user experience, interactive design, responsive design, information architecture, mobile interfaces for iOS and Android.</li>    
+                </ul>
+              </div>
             </div>
+
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+                <h3 class="panel-title">Experience</h3>
+              </div>
+              <div class="panel-body">
+
+ <ul>
+    <li>UI Front end Lead - IBM Interactive Experience</li>
+    <li>Web and Mobile tech prototyping client facing for banking applications. IBM BTT UI/UX development and customization for pixel perfect designs.</li>
+    <li>Main responsibilities:</li>
+    <li>Client facing technical prototyping for web and mobile.</li>
+    <li>Web UI architecture, interaction and transitions development.</li>
+    <li>Design and establish an optimized and agile front end workflow with control version.</li>
+    <li>Nodejs builders and task runners.</li>
+    <li>Front end integration with enterprise backend tooling.</li>
+    <li>Organize and empower the front end team for building amazing products.</li>
+    <li>Establish strategies for delivering multi browser and multi devices experiences.</li>
+    <li>Performance and mobile friendly optimizations.</li>
+    <li>Management, mentoring jr.</li> developers and project planning.</li>
+    <li>Coordinating the front end integration with the development team in Mexico and Spain.</li>   
+ </ul>
+
+ <ul>
+   <li>Cross platform, web UI instructor - KMMX</li>
+   <li>Hybrid mobile web applications trainer with Cordova (Phonegap) for iOS and Android.</li>
+   <li>Training and updating skills for enterprise teams about, user interface, front-end and mobile web technologies.</li>
+   <li>Technologies: HTML5, CSS3, JS, LESS, Jade, CoffeeScript, jQuery, jQuery Mobile, Sencha Touch, Mustache.js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
+ </ul>
+
+ <ul>
+    <li>Mobile & Front-end UI web developer - KTC Agency</li>
+    <li>UI and hybrid mobile app specialist for insurance and investment companies.</li>
+    <li>Main responsibilities: </li>
+    <li>Work closely with designers and engineers to continually improve UI and UX on web and mobile experiences.</li>
+    <li>Develop, debug front end and client side solutions.</li> 
+    <li>Development of mobile features.</li>
+    <li>Front end maintenance and testing on multiple browsers and devices.</li> 
+    <li>Cross platform, cross browser and cross device debugging.</li>
+    <li>Support and improve tools for continuous build, automated testing and release management.</li>
+    <li>Driving iOS and Android app releases and production builds.</li>
+    <li>Source code version control systems.</li>
+    <li> Technologies: HTML5, CSS3, JS, LESS, jQuery, Sencha Touch, Pure.</li>js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
+ </ul>
+
+              </div>
+            </div>
+
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
+                <h3 class="panel-title">Main Skills</h3>
+              </div>
+              <div class="panel-body">
+                <ul>
+                    <li>Development, debugging, integration and deployment of UI mobile and web projects UX oriented.</li>
+                    <li>Laying out pixel perfect web interfaces from scratch for web and mobile (Responsive, adaptive design).</li>
+                    <li>Cross platform, cross device, cross browser development with HTML5, CSS3 and JS.</li>
+                    <li>Hybrid application development deploy and release engineering for iOS and Android.</li>
+                    <li>Interaction design, UI functional design, web UI architecture, animation story telling with CSS3.</li>
+                    <li>Analysis, debugging, optimization and research of usability and interaction in web and mobile UI controls.</li>
+                    <li>Driving front end projects trought analysis, development, deployment, QA, preproduction and production environments.</li>
+                    <li>Fast technical prototyping for web and mobile.</li>
+                    <li>Problem solving, team management and project planning.</li>    
+                </ul>
+              </div>
+            </div>
+
 
             <div class="row marketing">
                 <div class="col-lg-6">
@@ -57,7 +140,7 @@
             </div>
 
             <div class="footer">
-                <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+                <p>Bernardo Soriano, Bootstrap UI</p>
             </div>
 
         </div>
