--- a/app/index.html
+++ b/app/index.html
@@ -31,13 +31,17 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>-->
-                <h1 class="text-muted">Bernardo Soriano - Mobile & UI Engineer</h1>
+                <div class="img"></div>
                 <div class="headerContainer">
-                    <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>                
-                    <h2 class="text-muted">Available for hiring</h2>
-                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                    <h2 class="text-muted">bersoriano@me.com</h2>                    
+                    <h1 class="text-muted">Bernardo Soriano - Mobile, UI Engineer</h1>
+                    <div>
+                        <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>                
+                        <h2 class="text-muted">Available for hiring</h2>
+                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                        <h2 class="text-muted">bersoriano@me.com</h2>                            
+                    </div>                
                 </div>
+                <button onclick="window.print()" type="button" class="btn print btn-default glyphicon glyphicon-print"></button>
             </div>
 
             <div class="panel panel-default">
@@ -60,45 +64,44 @@
                 <h3 class="panel-title">Experience</h3>
               </div>
               <div class="panel-body">
+                <ul>
+                  <li>UI Front end Lead - IBM Interactive Experience</li>
+                  <li>Leading the front-end team with agile methogologies and control version systems.</li>
+                  <li>Web and Mobile tech prototyping client facing for banking applications. IBM BTT UI/UX development and customization for pixel perfect designs. Establish an optimized front-end workflow with modern software tools and automating repetive tasks.
+                  Using CSS preprocessors and shared variables to optimize web theming. Developing a modular web UI architecture for the web channel.</li>
+                  <li>Client facing technical prototyping for web and mobile.</li>
+                  <li>Web UI architecture, interaction and transitions development.</li>
+                  <li>Design and establish an optimized and agile front end workflow with control version.</li>
+                  <li>Nodejs builders and task runners.</li>
+                  <li>Front end integration with enterprise backend tooling.</li>
+                  <li>Organize and empower the front end team for building amazing products.</li>
+                  <li>Establish strategies for delivering multi browser and multi devices experiences.</li>
+                  <li>Performance and mobile friendly optimizations.</li>
+                  <li>Management, mentoring jr. developers and project planning.</li>
+                  <li>Coordinating the front end integration with the development team in Mexico and Spain.</li>     
+                </ul>
 
- <ul>
-    <li>UI Front end Lead - IBM Interactive Experience</li>
-    <li>Web and Mobile tech prototyping client facing for banking applications. IBM BTT UI/UX development and customization for pixel perfect designs.</li>
-    <li>Main responsibilities:</li>
-    <li>Client facing technical prototyping for web and mobile.</li>
-    <li>Web UI architecture, interaction and transitions development.</li>
-    <li>Design and establish an optimized and agile front end workflow with control version.</li>
-    <li>Nodejs builders and task runners.</li>
-    <li>Front end integration with enterprise backend tooling.</li>
-    <li>Organize and empower the front end team for building amazing products.</li>
-    <li>Establish strategies for delivering multi browser and multi devices experiences.</li>
-    <li>Performance and mobile friendly optimizations.</li>
-    <li>Management, mentoring jr.</li> developers and project planning.</li>
-    <li>Coordinating the front end integration with the development team in Mexico and Spain.</li>   
- </ul>
+                <ul>
+                  <li>Cross platform, web UI instructor - KMMX</li>
+                  <li>Hybrid mobile web applications trainer with Cordova (Phonegap) for iOS and Android.</li>
+                  <li>Training and updating skills for enterprise teams about, user interface, front-end and mobile web technologies.</li>
+                  <li>Technologies: HTML5, CSS3, JS, LESS, Jade, CoffeeScript, jQuery, jQuery Mobile, Sencha Touch, Mustache.js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
+                </ul>
 
- <ul>
-   <li>Cross platform, web UI instructor - KMMX</li>
-   <li>Hybrid mobile web applications trainer with Cordova (Phonegap) for iOS and Android.</li>
-   <li>Training and updating skills for enterprise teams about, user interface, front-end and mobile web technologies.</li>
-   <li>Technologies: HTML5, CSS3, JS, LESS, Jade, CoffeeScript, jQuery, jQuery Mobile, Sencha Touch, Mustache.js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
- </ul>
-
- <ul>
-    <li>Mobile & Front-end UI web developer - KTC Agency</li>
-    <li>UI and hybrid mobile app specialist for insurance and investment companies.</li>
-    <li>Main responsibilities: </li>
-    <li>Work closely with designers and engineers to continually improve UI and UX on web and mobile experiences.</li>
-    <li>Develop, debug front end and client side solutions.</li> 
-    <li>Development of mobile features.</li>
-    <li>Front end maintenance and testing on multiple browsers and devices.</li> 
-    <li>Cross platform, cross browser and cross device debugging.</li>
-    <li>Support and improve tools for continuous build, automated testing and release management.</li>
-    <li>Driving iOS and Android app releases and production builds.</li>
-    <li>Source code version control systems.</li>
-    <li> Technologies: HTML5, CSS3, JS, LESS, jQuery, Sencha Touch, Pure.</li>js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
- </ul>
-
+                <ul>
+                  <li>Mobile & Front-end UI web developer - KTC Agency</li>
+                  <li>UI and hybrid mobile app specialist for insurance and investment companies.</li>
+                  <li>Main responsibilities: </li>
+                  <li>Work closely with designers and engineers to continually improve UI and UX on web and mobile experiences.</li>
+                  <li>Develop, debug front end and client side solutions.</li> 
+                  <li>Development of mobile features.</li>
+                  <li>Front end maintenance and testing on multiple browsers and devices.</li> 
+                  <li>Cross platform, cross browser and cross device debugging.</li>
+                  <li>Support and improve tools for continuous build, automated testing and release management.</li>
+                  <li>Driving iOS and Android app releases and production builds.</li>
+                  <li>Source code version control systems.</li>
+                  <li> Technologies: HTML5, CSS3, JS, LESS, jQuery, Sencha Touch, Pure.</li>js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
+                </ul>
               </div>
             </div>
 
@@ -122,25 +125,66 @@
               </div>
             </div>
 
-
-            <div class="row marketing">
-                <div class="col-lg-6">
-                    <h4>HTML5 Boilerplate</h4>
-                    <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
-
-                    <h4>Sass with Compass</h4>
-                    <p>Compass is an open-source CSS Authoring Framework that uses Sass.</p>
-
-
-                    <h4>Bootstrap</h4>
-                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-
-                </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+                <h3 class="panel-title">Languages</h3>
+              </div>
+              <div class="panel-body">
+                <ul>
+                    <li>Spanish (Native or bilingual proficiency)</li> 
+                    <li>English (Full professional proficiency)</li>  
+                    <li>German (Basic proficiency)</li> 
+                </ul>
+              </div>
             </div>
 
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                <h3 class="panel-title">Education</h3>
+              </div>
+              <div class="panel-body">
+                <ul>
+                    <li>(B.S.), Telecommunications and Computer science.</li>
+                    <li>Instituto Politécnico Nacional.</li> 
+                </ul>
+              </div>
+            </div>
+
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span>
+                <h3 class="panel-title">Coursework</h3>
+              </div>
+              <div class="panel-body">
+                <ul>
+                    <li>C# for Windows phone 8 applications - 30h Microsoft</li>
+                    <li>PIC development for Microchip and Freescale with basic, c++, assembler - 120h EME</li>
+                    <li>J2ME Mobile development - CIC IPN</li>
+                    <li>Stock market investments - 24h Investor House</li>
+                    <li>Hackathons: Apptualízate1 2012, Ciudad Móvil DF 2 2012, Blackberry 10 Jam 2012, Startup weekend for the planet, DevfestW, NASA Space App Challenge, Angel hack DF 2014</li>
+                    <li>Node.js for javascript server side apps - 30h KMMX</li>  
+                </ul>
+              </div>
+            </div>
+
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                <h3 class="panel-title">Certifications</h3>
+              </div>
+              <div class="panel-body">
+                <ul>
+                    <li>TOEIC - ETS Certificate</li>
+                    <li>TOEFL</li>
+                    <Li>First Certificate Cambridge</Li>
+                </ul>
+              </div>
+            </div>
             <div class="footer">
                 <p>Bernardo Soriano, Bootstrap UI</p>
+                <a href="https://github.com/bersoriano/responsiveCV">Fork this project on Github</a>
             </div>
 
         </div>
