--- a/app/index.html
+++ b/app/index.html
@@ -127,8 +127,80 @@
 
             <div class="panel panel-default">
               <div class="panel-heading">
+                <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+                <h3 class="panel-title">Technical toolbox</h3>
+              </div>
+              <div class="panel-body">
+                <ul>
+                  <li>Laying out single page apps with HTML5, CSS3 and JS.</li>
+                  <li class="boldText">Frameworks, libraries:</li>
+                  <li>Phonegap (Cordova)</li>
+                  <li>Dojo Toolkit</li>
+                  <li>Mustache.js </li>
+                  <li>Pure.js</li>
+                  <li>Grunt.js</li>
+                  <li>Bower.js</li>
+                  <li>Yeoman</li>
+                  <li class="boldText">Mobile:</li>
+                  <li>iOS UI design patterns</li>
+                  <li>Android UI design patterns</li>
+                  <li>Hybrid development</li>                                   
+                  <li class="boldText">UI Frameworks:</li>
+                  <li>Sencha Touch</li>
+                  <li>Dojo Dijit</li>
+                  <li>jQuery Mobile</li>
+                  <li>Bootstrap</li>
+                  <li>Zurb Foundtion</li>
+                  <li class="boldText">Preprocessors:</li>
+                  <li>Jade</li> 
+                  <li>LESS</li>
+                  <li>SASS</li>
+                  <li>Coffeescript</li>
+                  <li class="boldText">Back-end:</li>
+                  <li>LAMP, Node.js + Express</li>
+                  <li class="boldText">Integration:</li>
+                  <li>AJAX, XML, JSON, REST, IBM Websphere Portal, IBM BTT.</li>
+                  <li class="boldText">Design, IA & prototypes:</li>
+                  <li>Illustrator</li>
+                  <li>Photoshop</li> 
+                  <li>Axure</li>
+                  <li class="boldText">Programming languages:</li>
+                  <li>C++ </li>
+                  <li>C# </li>
+                  <li>Javascript.</li>
+                  <li>Swift</li>
+                  <li>Version control:</li>
+                  <li>GIT</li>
+                  <li>IBM RTC</li>
+                  <li class="boldText">Agile methodologies:</li>
+                  <li>Scrum.</li>
+                  <li class="boldText">PM Software:</li>
+                  <li>ActiveCollab </li>
+                  <li>IBM </li>
+                  <li>RTC </li>
+                  <li>HP ALM </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="panel panel-default">
+              <div class="panel-heading">
                 <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
                 <h3 class="panel-title">Languages</h3>
+              </div>
+              <div class="panel-body">
+                <ul>
+                    <li>Spanish (Native or bilingual proficiency)</li> 
+                    <li>English (Full professional proficiency)</li>  
+                    <li>German (Basic proficiency)</li> 
+                </ul>
+              </div>
+            </div>
+
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+                <h3 class="panel-title">Technical toolbox</h3>
               </div>
               <div class="panel-body">
                 <ul>
