added collapsible elements for better experience

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                  <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                <h3 class="panel-title">Cover letter</h3>
+                <span class="panel-title">Cover letter</span>
               </div>
               <div class="panel-body">
                 <ul>
@@ -61,11 +61,11 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-                <h3 class="panel-title">Experience</h3>
+                <span class="panel-title">Experience</span>
               </div>
               <div class="panel-body">
-                <ul>
-                  <li>UI Front end Lead - IBM Interactive Experience</li>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse1">UI Front end Lead - IBM Interactive Experience</span>
+                <ul class="collapse" id="collapse1">
                   <li>Leading the front-end team with agile methogologies and control version systems.</li>
                   <li>Web and Mobile tech prototyping client facing for banking applications. IBM BTT UI/UX development and customization for pixel perfect designs. Establish an optimized front-end workflow with modern software tools and automating repetive tasks.
                   Using CSS preprocessors and shared variables to optimize web theming. Developing a modular web UI architecture for the web channel.</li>
@@ -81,15 +81,15 @@
                   <li>Coordinating the front end integration with the development team in Mexico and Spain.</li>     
                 </ul>
 
-                <ul>
-                  <li>Cross platform, web UI instructor - KMMX</li>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse2">Cross platform, web UI instructor - KMMX</span>
+                <ul class="collapse" id="collapse2">
                   <li>Hybrid mobile web applications trainer with Cordova (Phonegap) for iOS and Android.</li>
                   <li>Training and updating skills for enterprise teams about, user interface, front-end and mobile web technologies.</li>
                   <li>Technologies: HTML5, CSS3, JS, LESS, Jade, CoffeeScript, jQuery, jQuery Mobile, Sencha Touch, Mustache.js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
                 </ul>
 
-                <ul>
-                  <li>Mobile & Front-end UI web developer - KTC Agency</li>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse3">Mobile & Front-end UI web developer - KTC Agency</span>
+                <ul class="collapse" id="collapse3">
                   <li>UI and hybrid mobile app specialist for insurance and investment companies.</li>
                   <li>Main responsibilities: </li>
                   <li>Work closely with designers and engineers to continually improve UI and UX on web and mobile experiences.</li>
@@ -108,12 +108,12 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
-                <h3 class="panel-title">Main Skills</h3>
+                <span class="panel-title">Main Skills</span>
               </div>
               <div class="panel-body">
                 <ul>
                     <li>Development, debugging, integration and deployment of UI mobile and web projects UX oriented.</li>
-                    <li>Laying out pixel perfect web interfaces from scratch for web and mobile (Responsive, adaptive design).</li>
+                    <li>Laying out pixel perfect web interfaces from scratch for web and mobile (Responsive, adaptive design, single page applications).</li>
                     <li>Cross platform, cross device, cross browser development with HTML5, CSS3 and JS.</li>
                     <li>Hybrid application development deploy and release engineering for iOS and Android.</li>
                     <li>Interaction design, UI functional design, web UI architecture, animation story telling with CSS3.</li>
@@ -128,65 +128,90 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-                <h3 class="panel-title">Technical toolbox</h3>
+                <span class="panel-title">Technical toolbox</span>
               </div>
               <div class="panel-body">
-                <ul>
-                  <li>Laying out single page apps with HTML5, CSS3 and JS.</li>
-                  <li class="boldText">Frameworks, libraries:</li>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset1">Frameworks, libraries:</span>
+                <ul class="collapse" id="collapset1">
                   <li>Phonegap (Cordova)</li>
                   <li>Dojo Toolkit</li>
                   <li>Mustache.js </li>
                   <li>Pure.js</li>
                   <li>Grunt.js</li>
                   <li>Bower.js</li>
-                  <li>Yeoman</li>
-                  <li class="boldText">Mobile:</li>
+                  <li>Yeoman</li>                  
+                </ul>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset2">Mobile:</span> 
+                <ul class="collapse" id="collapset2">
                   <li>iOS UI design patterns</li>
                   <li>Android UI design patterns</li>
-                  <li>Hybrid development</li>                                   
-                  <li class="boldText">UI Frameworks:</li>
+                  <li>Hybrid development</li>                      
+                </ul>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset3">UI Frameworks:</span>
+                <ul class="collapse" id="collapset3">
                   <li>Sencha Touch</li>
                   <li>Dojo Dijit</li>
                   <li>jQuery Mobile</li>
                   <li>Bootstrap</li>
-                  <li>Zurb Foundtion</li>
-                  <li class="boldText">Preprocessors:</li>
+                  <li>Zurb Foundtion</li>                  
+                </ul> 
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset4">Preprocessors:</span>
+                <ul class="collapse" id="collapset4">
                   <li>Jade</li> 
                   <li>LESS</li>
                   <li>SASS</li>
-                  <li>Coffeescript</li>
-                  <li class="boldText">Back-end:</li>
-                  <li>LAMP, Node.js + Express</li>
-                  <li class="boldText">Integration:</li>
-                  <li>AJAX, XML, JSON, REST, IBM Websphere Portal, IBM BTT.</li>
-                  <li class="boldText">Design, IA & prototypes:</li>
+                  <li>Coffeescript</li>                 
+                </ul>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset5">Back-end:</span>
+                <ul class="collapse" id="collapset5">
+                  <li>LAMP</li> 
+                  <li>Node.js</li>
+                  <li>Basic Express.js</li>
+                </ul>                
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset6">Integration:</span>
+                <ul class="collapse" id="collapset6">
+                  <li>AJAX</li> 
+                  <li>XML</li> 
+                  <li>JSON</li> 
+                  <li>REST</li>
+                  <li>IBM Websphere Portal</li> 
+                  <li>IBM BTT</li>
+                </ul> 
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset7">Design, IA & prototypes:</span>
+                <ul class="collapse" id="collapset7">
                   <li>Illustrator</li>
                   <li>Photoshop</li> 
                   <li>Axure</li>
-                  <li class="boldText">Programming languages:</li>
-                  <li>C++ </li>
+                </ul>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset8">Programming languages:</span>
+                <ul class="collapse" id="collapset8">
                   <li>C# </li>
                   <li>Javascript.</li>
                   <li>Swift</li>
-                  <li>Version control:</li>
+                </ul>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset9">Version control:</span>
+                <ul class="collapse" id="collapset9">
                   <li>GIT</li>
                   <li>IBM RTC</li>
-                  <li class="boldText">Agile methodologies:</li>
+                </ul>
+                <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset10">Agile methodologies:</span>
+                <ul class="collapse" id="collapset10">
                   <li>Scrum.</li>
-                  <li class="boldText">PM Software:</li>
+                </ul>                                
+                 <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset11">PM Software:</span>
+                <ul class="collapse" id="collapset11">
                   <li>ActiveCollab </li>
                   <li>IBM </li>
                   <li>RTC </li>
                   <li>HP ALM </li>
-                </ul>
+                </ul> 
               </div>
             </div>
 
             <div class="panel panel-default">
               <div class="panel-heading">
                 <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
-                <h3 class="panel-title">Languages</h3>
+                <span class="panel-title">Languages</span>
               </div>
               <div class="panel-body">
                 <ul>
@@ -200,7 +225,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
-                <h3 class="panel-title">Technical toolbox</h3>
+                <span class="panel-title">Technical toolbox</span>
               </div>
               <div class="panel-body">
                 <ul>
@@ -214,7 +239,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-                <h3 class="panel-title">Education</h3>
+                <span class="panel-title">Education</span>
               </div>
               <div class="panel-body">
                 <ul>
@@ -227,7 +252,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span>
-                <h3 class="panel-title">Coursework</h3>
+                <span class="panel-title">Coursework</span>
               </div>
               <div class="panel-body">
                 <ul>
@@ -244,7 +269,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-                <h3 class="panel-title">Certifications</h3>
+                <span class="panel-title">Certifications</span>
               </div>
               <div class="panel-body">
                 <ul>
