--- a/app/index.html
+++ b/app/index.html
@@ -280,7 +280,7 @@
               </div>
             </div>
             <div class="footer">
-                <p>Bernardo Soriano, Bootstrap UI</p>
+                <p>Designed and coded by <a href="https://twitter.com/bersoriano">@bersoriano</a> with Bootstrap UI</p>
                 <a href="https://github.com/bersoriano/responsiveCV">Fork this project on Github</a>
             </div>
 
