--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,9 @@
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css styles/vendor.css -->
+        <!-- build:css styles/fonts.css -->
+        <link rel="stylesheet" href="styles/fonts.css">
+        <!-- endbuild -->        
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
