added comments for each section

--- a/app/index.html
+++ b/app/index.html
@@ -25,14 +25,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
+        <!-- Main Container-->
         <div class="container landingHome">
+            <!-- Header-->
             <div class="header">
-                <!--<ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>-->
                 <div class="img"></div>
                 <div class="headerContainer">
                     <h1 class="text-muted">Bernardo Soriano - Mobile, UI Engineer</h1>
@@ -47,6 +43,7 @@
             </div>
 
             <div class="col-md-6">
+              <!-- Cover letter-->
               <div class="panel panel-default">
                 <div class="panel-heading">
                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
@@ -60,7 +57,7 @@
                   </ul>
                 </div>
               </div>
-
+              <!-- Technical toolbox-->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
@@ -143,7 +140,7 @@
                   </ul> 
                 </div>
               </div>
-
+              <!-- Languages-->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
@@ -157,7 +154,7 @@
                   </ul>
                 </div>
               </div>
-
+              <!-- Certifications-->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
@@ -171,11 +168,10 @@
                   </ul>
                 </div>
               </div>
-
             </div>
 
             <div class="col-md-6">
-
+              <!-- Experience-->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
@@ -220,7 +216,7 @@
                   </ul>
                 </div>
               </div>
-
+              <!-- Main Skills-->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
@@ -240,7 +236,7 @@
                   </ul>
                 </div>
               </div>
-
+              <!-- Education-->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
@@ -253,7 +249,7 @@
                   </ul>
                 </div>
               </div>
-
+              <!-- Coursework-->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span>
@@ -271,12 +267,11 @@
                 </div>
               </div>              
             </div>
-
+            <!-- Footer-->
             <div class="footer">
                 <p>Designed and coded by <a href="https://twitter.com/bersoriano">@bersoriano</a> with Bootstrap UI</p>
                 <a href="https://github.com/bersoriano/responsiveCV">Fork this project on Github</a>
             </div>
-
         </div>
 
 
