--- a/app/index.html
+++ b/app/index.html
@@ -267,11 +267,14 @@
                 </div>
               </div>              
             </div>
+            <div class="col-md-12">
             <!-- Footer-->
             <div class="footer">
                 <p>Designed and coded by <a href="https://twitter.com/bersoriano">@bersoriano</a> with Bootstrap UI</p>
                 <a href="https://github.com/bersoriano/responsiveCV">Fork this project on Github</a>
+            </div>              
             </div>
+
         </div>
 
 
