--- a/app/index.html
+++ b/app/index.html
@@ -29,17 +29,19 @@
         <div class="container landingHome">
             <!-- Header-->
             <div class="header">
+              <div class="headerContainer">
                 <div class="img"></div>
-                <div class="headerContainer">
-                    <h1 class="text-muted">Bernardo Soriano - Mobile, UI Engineer</h1>
+                <div class="headerText">
+                    <h1 class="header-Title">Bernardo Soriano - Mobile, UI Engineer</h1>
                     <div>
                         <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>                
-                        <h2 class="text-muted">Available for hiring</h2>
+                        <h2 class="header-Title">Available for hiring</h2>
                         <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                        <h2 class="text-muted">bersoriano@me.com</h2>                            
+                        <h2 class="header-Title">bersoriano@me.com</h2>                            
                     </div>                
                 </div>
-                <button onclick="window.print()" type="button" class="btn print btn-default glyphicon glyphicon-print"></button>
+                <button onclick="window.print()" type="button" class="btn print btn-default glyphicon glyphicon-print"></button>                
+              </div>
             </div>
 
             <div class="col-md-6">
