new fancy overlay

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,10 @@
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+        <!-- Overlay-->        
+        <div class="overlay">
+          <h2>Web UI & Mobile development</h2>
+        </div>
         <!-- Main Container-->
         <div class="container landingHome">
             <!-- Header-->
@@ -53,9 +56,9 @@
                 </div>
                 <div class="panel-body">
                   <ul>
-                      <li> Delivering world class experiences for web and mobile, working across user interface, mobile strategies and digital transformation programs.</li>
-                      <li> Industry background: Banking, Insurance, Investments, Digital Marketing, Digital Publishing, Entrepreneurship.</li>
-                      <li> Key words: Cross platform, cross device, cross browser, front end engineering, mobile web, hybrid mobile applications, user interface, user experience, interactive design, responsive design, information architecture, mobile interfaces for iOS and Android.</li>    
+                      <li>Delivering world class experiences for web and mobile, working across user interface, mobile strategies and digital transformation programs.</li>
+                      <li>Industry background: Banking, Insurance, Investments, Digital Marketing, Digital Publishing, Entrepreneurship.</li>
+                      <li>Key words: Cross platform, cross device, cross browser, front end engineering, mobile web, hybrid mobile applications, user interface, user experience, interactive design, responsive design, information architecture, mobile interfaces for iOS and Android.</li>    
                   </ul>
                 </div>
               </div>
