separated print styles

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,10 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/fonts.css -->
         <link rel="stylesheet" href="styles/fonts.css">
-        <!-- endbuild -->        
+        <!-- endbuild -->  
+        <!-- build:css styles/print.css -->
+        <link rel="stylesheet" href="styles/print.css">
+        <!-- endbuild -->                
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
