minor fixes for material design style

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <!-- endbuild -->  
         <!-- build:css styles/print.css -->
         <link rel="stylesheet" href="styles/print.css">
-        <!-- endbuild -->                
+        <!-- endbuild -->                       
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
@@ -46,7 +46,7 @@
                         <h2 class="header-Title">bersoriano@me.com</h2>                            
                     </div>                
                 </div>
-                <button onclick="window.print()" type="button" class="btn print btn-default glyphicon glyphicon-print"></button>                
+                <button onclick="window.print()" type="button" class="printbtn btn btn-default print glyphicon glyphicon-print"></button>                
               </div>
             </div>
 
