--- a/app/index.html
+++ b/app/index.html
@@ -278,7 +278,7 @@
             <div class="col-md-12">
             <!-- Footer-->
             <div class="footer">
-                <p>Designed and coded by <a href="https://twitter.com/bersoriano">@bersoriano</a> with Bootstrap UI</p>
+                <p>Designed and coded by <a href="https://twitter.com/bersoriano">@bersoriano</a> with Bootstrap UI and Material Design principles.</p>
                 <a href="https://github.com/bersoriano/responsiveCV">Fork this project on Github</a>
             </div>              
             </div>
