--- a/app/index.html
+++ b/app/index.html
@@ -38,10 +38,10 @@
               <div class="headerContainer">
                 <div class="img"></div>
                 <div class="headerText">
-                    <h1 class="header-Title">Bernardo Soriano - Mobile, UI Engineer</h1>
+                    <h1 class="header-Title">Bernardo Soriano. Mobile, UI Engineer</h1>
                     <div>
-                        <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>                
-                        <h2 class="header-Title">Available for hiring</h2>
+                        <!--<span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>                
+                        <h2 class="header-Title">Available for hiring</h2>-->
                         <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
                         <h2 class="header-Title">bersoriano@me.com</h2>                            
                     </div>                
@@ -49,7 +49,7 @@
                 <button onclick="window.print()" type="button" class="printbtn btn btn-default print glyphicon glyphicon-print"></button>                
               </div>
             </div>
-
+            <h1>hola mundo</h1>
             <div class="col-md-6">
               <!-- Cover letter-->
               <div class="panel panel-default">
@@ -142,8 +142,7 @@
                    <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset11">PM Software:</span>
                   <ul class="collapse" id="collapset11">
                     <li>ActiveCollab </li>
-                    <li>IBM </li>
-                    <li>RTC </li>
+                    <li>IBM RTC </li>
                     <li>HP ALM </li>
                   </ul> 
                 </div>
@@ -188,12 +187,13 @@
                 <div class="panel-body">
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse1">UI Front end Lead - IBM Interactive Experience</span>
                   <ul class="collapse" id="collapse1">
-                    <li>Leading the front-end team with agile methogologies and control version systems.</li>
+                    <li>Web user interface specialist, delivering an enhanced user experience for Banking.</li>
+                    <li>Main responsibilities:</li>
                     <li>Client facing technical prototyping for web and mobile.</li>
                     <li>Web UI architecture, interaction and transitions development.</li>
                     <li>Design and establish an optimized and agile front end workflow with control version.</li>
                     <li>Nodejs builders and task runners.</li>
-                    <li>Front end integration with enterprise backend tooling.</li>
+                    <li>IBM BTT UI front end integration.</li>
                     <li>Organize and empower the front end team for building amazing products.</li>
                     <li>Establish strategies for delivering multi browser and multi devices experiences.</li>
                     <li>Performance and mobile friendly optimizations.</li>
