--- a/app/index.html
+++ b/app/index.html
@@ -43,13 +43,13 @@
                         <!--<span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>                
                         <h2 class="header-Title">Available for hiring</h2>-->
                         <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                        <h2 class="header-Title">bersoriano@me.com</h2>                            
+                        <h2 class="header-Title">bersoriano@me.com</h2>
                     </div>                
                 </div>
                 <button onclick="window.print()" type="button" class="printbtn btn btn-default print glyphicon glyphicon-print"></button>                
               </div>
             </div>
-            <h1>hola mundo</h1>
+            <h1 class="mobilev">Mobile version available shortly...</h1>
             <div class="col-md-6">
               <!-- Cover letter-->
               <div class="panel panel-default">
@@ -60,6 +60,7 @@
                 <div class="panel-body">
                   <ul>
                       <li>Delivering world class experiences for web and mobile, working across user interface, mobile strategies and digital transformation programs.</li>
+                      <li>Specialities: Web UI (Front end), iOS and Android hybrid apps.</li>
                       <li>Industry background: Banking, Insurance, Investments, Digital Marketing, Digital Publishing, Entrepreneurship.</li>
                       <li>Key words: Cross platform, cross device, cross browser, front end engineering, mobile web, hybrid mobile applications, user interface, user experience, interactive design, responsive design, information architecture, mobile interfaces for iOS and Android.</li>    
                   </ul>
@@ -73,7 +74,7 @@
                 </div>
                 <div class="panel-body">
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset1">Frameworks, libraries:</span>
-                  <ul class="collapse" id="collapset1">
+                  <ul class="collapse in" id="collapset1">
                     <li>Phonegap (Cordova)</li>
                     <li>Dojo Toolkit</li>
                     <li>Mustache.js </li>
@@ -81,15 +82,15 @@
                     <li>Grunt.js</li>
                     <li>Bower.js</li>
                     <li>Yeoman</li>                  
+                    <li>Angular.js fundamentals</li>
                   </ul>
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset2">Mobile:</span> 
-                  <ul class="collapse" id="collapset2">
-                    <li>iOS UI design patterns</li>
-                    <li>Android UI design patterns</li>
-                    <li>Hybrid development</li>                      
+                  <ul class="collapse in" id="collapset2">
+                    <li>iOS hybrid mobile development with Xcode and swift fundamentals. </li>
+                    <li>Android hybrid mobile development with Eclipse and Android SDK</li>
                   </ul>
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset3">UI Frameworks:</span>
-                  <ul class="collapse" id="collapset3">
+                  <ul class="collapse in" id="collapset3">
                     <li>Sencha Touch</li>
                     <li>Dojo Dijit</li>
                     <li>jQuery Mobile</li>
@@ -97,20 +98,20 @@
                     <li>Zurb Foundtion</li>                  
                   </ul> 
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset4">Preprocessors:</span>
-                  <ul class="collapse" id="collapset4">
+                  <ul class="collapse in" id="collapset4">
                     <li>Jade</li> 
                     <li>LESS</li>
                     <li>SASS</li>
                     <li>Coffeescript</li>                 
                   </ul>
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset5">Back-end:</span>
-                  <ul class="collapse" id="collapset5">
+                  <ul class="collapse in" id="collapset5">
                     <li>LAMP</li> 
                     <li>Node.js</li>
                     <li>Basic Express.js</li>
                   </ul>                
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset6">Integration:</span>
-                  <ul class="collapse" id="collapset6">
+                  <ul class="collapse in" id="collapset6">
                     <li>AJAX</li> 
                     <li>XML</li> 
                     <li>JSON</li> 
@@ -119,28 +120,28 @@
                     <li>IBM BTT</li>
                   </ul> 
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset7">Design, IA & prototypes:</span>
-                  <ul class="collapse" id="collapset7">
+                  <ul class="collapse in" id="collapset7">
                     <li>Illustrator</li>
                     <li>Photoshop</li> 
                     <li>Axure</li>
                   </ul>
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset8">Programming languages:</span>
-                  <ul class="collapse" id="collapset8">
+                  <ul class="collapse in" id="collapset8">
                     <li>C# </li>
                     <li>Javascript.</li>
                     <li>Swift</li>
                   </ul>
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset9">Version control:</span>
-                  <ul class="collapse" id="collapset9">
+                  <ul class="collapse in" id="collapset9">
                     <li>GIT</li>
                     <li>IBM RTC</li>
                   </ul>
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset10">Agile methodologies:</span>
-                  <ul class="collapse" id="collapset10">
+                  <ul class="collapse in" id="collapset10">
                     <li>Scrum.</li>
                   </ul>                                
                    <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset11">PM Software:</span>
-                  <ul class="collapse" id="collapset11">
+                  <ul class="collapse in" id="collapset11">
                     <li>ActiveCollab </li>
                     <li>IBM RTC </li>
                     <li>HP ALM </li>
@@ -186,30 +187,31 @@
                 </div>
                 <div class="panel-body">
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse1">UI Front end Lead - IBM Interactive Experience</span>
-                  <ul class="collapse" id="collapse1">
+                  <ul class="collapse in" id="collapse1">
                     <li>Web user interface specialist, delivering an enhanced user experience for Banking.</li>
                     <li>Main responsibilities:</li>
-                    <li>Client facing technical prototyping for web and mobile.</li>
+                    <li>Leading the front-end team, 6 developers. </li>
                     <li>Web UI architecture, interaction and transitions development.</li>
-                    <li>Design and establish an optimized and agile front end workflow with control version.</li>
+                    <li>Implement an optimized and agile front end workflow with control version.</li>
                     <li>Nodejs builders and task runners.</li>
                     <li>IBM BTT UI front end integration.</li>
                     <li>Organize and empower the front end team for building amazing products.</li>
                     <li>Establish strategies for delivering multi browser and multi devices experiences.</li>
                     <li>Performance and mobile friendly optimizations.</li>
                     <li>Management, mentoring jr. developers and project planning.</li>
+                    <li>Client facing technical prototyping for web and mobile.</li>
                     <li>Coordinating the front end integration with the development team in Mexico and Spain.</li>     
                   </ul>
 
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse2">Cross platform, web UI instructor - KMMX</span>
-                  <ul class="collapse" id="collapse2">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse2">Mobile & Front-end Development Trainer - KMMX</span>
+                  <ul class="collapse in" id="collapse2">
                     <li>Hybrid mobile web applications trainer with Cordova (Phonegap) for iOS and Android.</li>
                     <li>Training and updating skills for enterprise teams about, user interface, front-end and mobile web technologies.</li>
                     <li>Technologies: HTML5, CSS3, JS, LESS, Jade, CoffeeScript, jQuery, jQuery Mobile, Sencha Touch, Mustache.js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
                   </ul>
 
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse3">Mobile & Front-end UI web developer - KTC Agency</span>
-                  <ul class="collapse" id="collapse3">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse3">Mobile & Front-end web UI developer - KTC Agency</span>
+                  <ul class="collapse in" id="collapse3">
                     <li>UI and hybrid mobile app specialist for insurance and investment companies.</li>
                     <li>Main responsibilities: </li>
                     <li>Work closely with designers and engineers to continually improve UI and UX on web and mobile experiences.</li>
