--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <title>Bernardo Soriano</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=.2, maximum-scale=.2">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/fonts.css -->
