media print styles

--- a/app/index.html
+++ b/app/index.html
@@ -12,16 +12,16 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/fonts.css -->
         <link rel="stylesheet" href="styles/fonts.css">
-        <!-- endbuild -->  
-        <!-- build:css styles/print.css -->
-        <link rel="stylesheet" href="styles/print.css">
-        <!-- endbuild -->                       
+        <!-- endbuild -->                      
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
+        <!-- build:css styles/print.css -->
+        <link rel="stylesheet" href="styles/print.css">
+        <!-- endbuild -->           
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -281,7 +281,7 @@
             <!-- Footer-->
             <div class="footer">
                 <p>Designed and coded by <a href="https://twitter.com/bersoriano">@bersoriano</a> with Bootstrap UI and Material Design principles.</p>
-                <a href="https://github.com/bersoriano/responsiveCV">Fork this project on Github</a>
+                <a href="https://github.com/bersoriano/responsiveCV">Fork this project on Github</a> | <a class="printed link" href="www.bernardosoriano.com/cv/">Printed with CSS media print, click here, watch it on the web</a>
             </div>              
             </div>
 
