--- a/app/index.html
+++ b/app/index.html
@@ -176,9 +176,7 @@
                   </ul>
                 </div>
               </div>
-            </div>
-
-            <div class="col-md-6">
+            </div><div class="col-md-6">
               <!-- Experience-->
               <div class="panel panel-default">
                 <div class="panel-heading">
@@ -259,6 +257,19 @@
                   </ul>
                 </div>
               </div>
+              <!-- Education-->
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+                  <span class="panel-title">Travel</span>
+                </div>
+                <div class="panel-body">
+                  <ul>
+                    <li>Available for traveling.</li>
+                    <li>Available to relocate city / country.</li>
+                  </ul>
+                </div>
+              </div>              
               <!-- Coursework-->
               <div class="panel panel-default">
                 <div class="panel-heading">
