--- a/app/index.html
+++ b/app/index.html
@@ -73,8 +73,8 @@
                   <span class="panel-title">Technical toolbox</span>
                 </div>
                 <div class="panel-body">
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset1">Frameworks, libraries:</span>
-                  <ul class="collapse in" id="collapset1">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset1">Frameworks, libraries</span>
+                  <ul class="collapse" id="collapset1">
                     <li>Phonegap (Cordova)</li>
                     <li>Dojo Toolkit</li>
                     <li>Mustache.js </li>
@@ -84,34 +84,34 @@
                     <li>Yeoman</li>                  
                     <li>Angular.js fundamentals</li>
                   </ul>
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset2">Mobile:</span> 
-                  <ul class="collapse in" id="collapset2">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset2">Mobile</span> 
+                  <ul class="collapse" id="collapset2">
                     <li>iOS hybrid mobile development with Xcode and swift fundamentals. </li>
                     <li>Android hybrid mobile development with Eclipse and Android SDK</li>
                   </ul>
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset3">UI Frameworks:</span>
-                  <ul class="collapse in" id="collapset3">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset3">UI Frameworks</span>
+                  <ul class="collapse" id="collapset3">
                     <li>Sencha Touch</li>
                     <li>Dojo Dijit</li>
                     <li>jQuery Mobile</li>
                     <li>Bootstrap</li>
                     <li>Zurb Foundtion</li>                  
                   </ul> 
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset4">Preprocessors:</span>
-                  <ul class="collapse in" id="collapset4">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset4">Preprocessors</span>
+                  <ul class="collapse" id="collapset4">
                     <li>Jade</li> 
                     <li>LESS</li>
                     <li>SASS</li>
                     <li>Coffeescript</li>                 
                   </ul>
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset5">Back-end:</span>
-                  <ul class="collapse in" id="collapset5">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset5">Back-end</span>
+                  <ul class="collapse" id="collapset5">
                     <li>LAMP</li> 
                     <li>Node.js</li>
                     <li>Basic Express.js</li>
                   </ul>                
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset6">Integration:</span>
-                  <ul class="collapse in" id="collapset6">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset6">Integration</span>
+                  <ul class="collapse" id="collapset6">
                     <li>AJAX</li> 
                     <li>XML</li> 
                     <li>JSON</li> 
@@ -119,29 +119,29 @@
                     <li>IBM Websphere Portal</li> 
                     <li>IBM BTT</li>
                   </ul> 
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset7">Design, IA & prototypes:</span>
-                  <ul class="collapse in" id="collapset7">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset7">Design, IA & prototypes</span>
+                  <ul class="collapse" id="collapset7">
                     <li>Illustrator</li>
                     <li>Photoshop</li> 
                     <li>Axure</li>
                   </ul>
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset8">Programming languages:</span>
-                  <ul class="collapse in" id="collapset8">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset8">Programming languages</span>
+                  <ul class="collapse" id="collapset8">
                     <li>C# </li>
-                    <li>Javascript.</li>
-                    <li>Swift</li>
+                    <li>Javascript</li>
+                    <li>Swift fundamentals</li>
                   </ul>
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset9">Version control:</span>
-                  <ul class="collapse in" id="collapset9">
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset9">Version control</span>
+                  <ul class="collapse" id="collapset9">
                     <li>GIT</li>
                     <li>IBM RTC</li>
                   </ul>
-                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset10">Agile methodologies:</span>
-                  <ul class="collapse in" id="collapset10">
-                    <li>Scrum.</li>
+                  <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset10">Agile methodologies</span>
+                  <ul class="collapse" id="collapset10">
+                    <li>Scrum</li>
                   </ul>                                
-                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset11">PM Software:</span>
-                  <ul class="collapse in" id="collapset11">
+                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapset11">PM Software</span>
+                  <ul class="collapse" id="collapset11">
                     <li>ActiveCollab </li>
                     <li>IBM RTC </li>
                     <li>HP ALM </li>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="panel-body">
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse1">UI Front end Lead - IBM Interactive Experience</span>
-                  <ul class="collapse in" id="collapse1">
+                  <ul class="collapse" id="collapse1">
                     <li>Web user interface specialist, delivering an enhanced user experience for Banking.</li>
                     <li>Main responsibilities:</li>
                     <li>Leading the front-end team, 6 developers. </li>
@@ -202,14 +202,14 @@
                   </ul>
 
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse2">Mobile & Front-end Development Trainer - KMMX</span>
-                  <ul class="collapse in" id="collapse2">
+                  <ul class="collapse" id="collapse2">
                     <li>Hybrid mobile web applications trainer with Cordova (Phonegap) for iOS and Android.</li>
                     <li>Training and updating skills for enterprise teams about, user interface, front-end and mobile web technologies.</li>
                     <li>Technologies: HTML5, CSS3, JS, LESS, Jade, CoffeeScript, jQuery, jQuery Mobile, Sencha Touch, Mustache.js, GIT, User Interfaces from scratch, Phonegap, iOS SDK, Android SDK.</li>
                   </ul>
 
                   <span class="headerCollapsible glyphicon glyphicon-plus" data-toggle="collapse" data-target="#collapse3">Mobile & Front-end web UI developer - KTC Agency</span>
-                  <ul class="collapse in" id="collapse3">
+                  <ul class="collapse" id="collapse3">
                     <li>UI and hybrid mobile app specialist for insurance and investment companies.</li>
                     <li>Main responsibilities: </li>
                     <li>Work closely with designers and engineers to continually improve UI and UX on web and mobile experiences.</li>
