--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,8 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
-        <!-- build:css styles/print.css -->
-        <link rel="stylesheet" href="styles/print.css">
+        <!-- build:css(.tmp) styles/print.css -->
+        <link rel="stylesheet" href="styles/print.css" type="text/css" media="print">
         <!-- endbuild -->           
     </head>
     <body>
