--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
                         <!--<span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>                
                         <h2 class="header-Title">Available for hiring</h2>-->
                         <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                        <h2 class="header-Title">bersoriano@me.com | Mobile: +52 5514002785</h2>
+                        <h2 class="header-Title"><a href="mailto:">bersoriano@me.com</a>| Mobile:<a href="tel:+525514002785">+52 5514002785</a></h2>
                     </div>                
                 </div>
                 <button onclick="window.print()" type="button" class="printbtn btn btn-default print glyphicon glyphicon-print"></button>                
